--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "4.6",
     "date-fns": "^2.26.0",
+    "dotenv": "^14.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
     "react-bootstrap-icons": "^1.6.1",
