--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.25.0",
     "bootstrap": "4.6",
+    "bootstrap-icons": "^1.7.2",
     "date-fns": "^2.26.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
